--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,17 +11,18 @@ source:
   sha256: 34625af405f4aa19293eaaefe145ccc92c6018ae9798f53a03a7fcc996e541aa
 
 build:
-  number: 3
+  number: 0
+  noarch: python
   script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
   host:
     - pip
-    - python  # [py>=36]
+    - python >=3.6
   run:
     - click >=7.0
     - jsonschema >=3.0.0
-    - python  # [py>=36]
+    - python >=3.6
     - requests >=2.21.0
     - rfc3987 >=1.3.8
 
