--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "notifiers" %}
-{% set version = "1.2.1" %}
+{% set version = "1.3.3" %}
 
 
 package:
@@ -8,9 +8,11 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/notifiers-{{ version }}.tar.gz
-  sha256: 34625af405f4aa19293eaaefe145ccc92c6018ae9798f53a03a7fcc996e541aa
+  sha256: 9fd8d95ab1ebcd3852423755aa90cbb0f72a805ca77af0d8c9ad7af445f58399
 
 build:
+  entry_points:
+    - notifiers = notifiers_cli.core:entry_point
   number: 0
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
@@ -18,20 +20,21 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.6
+    - poetry-core >=1.0.0
+    - python >=3.6,<4.0
   run:
-    - click >=7.0
-    - jsonschema >=3.0.0
-    - python >=3.6
-    - requests >=2.21.0
-    - rfc3987 >=1.3.8
+    - click >=8.0.3,<9.0.0
+    - jsonschema >=4.4.0,<5.0.0
+    - python >=3.6,<4.0
+    - requests >=2.27.1,<3.0.0
 
 test:
   imports:
     - notifiers
-    - notifiers.providers
+    - notifiers_cli
   commands:
     - pip check
+    - notifiers --help
   requires:
     - pip
 
@@ -44,3 +47,4 @@ about:
 extra:
   recipe-maintainers:
     - conda-forge/rpaframework-core
+    - thewchan
