--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,12 +20,12 @@ build:
 requirements:
   host:
     - pip
-    - poetry-core >=1.0.0
+    - hatchling
     - python {{ python_min }}
   run:
-    - click >=8.0.3,<9.0.0
-    - jsonschema >=4.4.0,<5.0.0
     - python >={{ python_min }},<4.0
+    - click >=8.0.3
+    - jsonschema >=4.4.0
     - requests >=2.27.1,<3.0.0
 
 test:
