--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,6 +27,7 @@ requirements:
     - click >=8.0.3
     - jsonschema >=4.4.0
     - requests >=2.27.1,<3.0.0
+    - importlib_metadata >=3.6
 
 test:
   imports:
